 2014-07-05 18:36  asfernandes 
   M src/jrd/DatabaseSnapshot.cpp
   M src/jrd/UserManagement.cpp
   M src/jrd/jrd.cpp
   M src/jrd/obj.h
   M src/utilities/gsec/gsec.cpp
   M src/yvalve/MasterImplementation.cpp
   M src/yvalve/PluginManager.cpp
   M src/yvalve/why.cpp
Misc.

 2014-07-04 14:43  fsg 
   M src/isql/extract.epp
   M src/isql/isql.h
rename constants used by extract.epp to avoid future naming conflicts

 2014-07-04 08:25  alexpeshkoff 
   M lang_helpers/gds_codes.ftn
   M lang_helpers/gds_codes.pas
   M src/common/config/config.cpp
   M src/include/gen/codetext.h
   M src/include/gen/iberror.h
   M src/include/gen/msgs.h
   M src/include/gen/sql_code.h
   M src/include/gen/sql_state.h
   M src/msgs/messages2.sql
   M src/msgs/system_errors2.sql
   M src/yvalve/PluginManager.cpp
Fixed CORE-4478: Failure to load provider/plugin not reported

 2014-07-03 09:43  alexpeshkoff 
   M src/auth/SecureRemotePassword/manage/SrpManagement.cpp
Fixed management for users with ' (single quote) in a name

 2014-07-03 09:37  alexpeshkoff 
   M src/yvalve/why.cpp
Added missing check for provider status before creating yvalve objects

 2014-07-03 07:54  alexpeshkoff 
   M configure.ac
   M src/jrd/os/posix/unix.cpp
Frontported fix for linux build regression

 2014-07-02 19:19  dimitr 
   M src/burp/restore.epp
Fixed CORE-4480: ISQL issues warning: "Bad debug info format" when connect to database with stored function after it's restoring.

 2014-07-02 12:57  alexpeshkoff 
   M examples/dbcrypt/CryptKeyHolder.cpp
   M examples/dbcrypt/DbCrypt.cpp
   M src/auth/AuthDbg.cpp
   M src/auth/SecureRemotePassword/manage/SrpManagement.cpp
   M src/auth/SecureRemotePassword/server/SrpServer.cpp
   M src/auth/SecurityDatabase/LegacyManagement.epp
   M src/auth/SecurityDatabase/LegacyServer.cpp
   M src/common/Auth.cpp
   M src/common/Auth.h
   M src/common/MsgMetadata.cpp
   M src/common/call_service.cpp
   M src/common/classes/GetPlugins.h
   M src/common/classes/ImplementHelper.h